[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["syed"]

[workspace.dependencies]
# internal crates
vane-model = { path = "crates/vane-model" }
vane-data = { path = "crates/vane-data" }
vane-sim = { path = "crates/vane-sim" }
vane-optimize = { path = "crates/vane-optimize" }
vane-score = { path = "crates/vane-score" }
vane-forecast = { path = "crates/vane-forecast" }

# shared third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
